# flake-ci

./: Cargo.toml  README.md  TODO.md  flake-ci.toml  flake.nix  justfile  nix-ci.toml
.github/workflows/: ci.yaml  flake.yaml
nix/devshells/: ci.nix  default.nix
nix/lib/: default.nix
src/: app.rs  config.rs  graph.rs  main.rs  nix.rs
src/app/: summary.rs
